# hyper-rustls-test

./: Cargo.toml  generateCertificate.sh
certs/: server.crt  server.key
examples/: sample.pem
src/: handlers.rs  lib.rs  main.rs  middlewares.rs
