[package]
name = "hyper-rustls-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2 = "0.4"
http = "1"
http-body-util = "0.1"
hyper = "1.1"
hyper-rustls = "0.26"
hyper-util = {version = "0.1", features = ["full"]}
rustls = "0.22"
rustls-pemfile = "2.0.0"
tokio = {version = "1", features = ["full"]}
tokio-rustls = "0.25"

